--- a/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/Jianceshenqingdan.xaml
+++ b/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/Jianceshenqingdan.xaml
@@ -36,13 +36,19 @@
             </DataGrid.Columns>
 
         </DataGrid>
-        <TabControl x:Name="tabControl" Height="252" >
-            <TabItem Header="样本" FontSize="16">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-            <TabItem Header="附件" FontSize="16">
-                <Grid Background="#FFE5E5E5"/>
-            </TabItem>
-        </TabControl>
+        <Grid>
+            <Label x:Name="label1_Copy1" Content="样本列表" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <KONGJIAN:Biaogekongzhi x:Name="yangbenkongzhiUI" Xinjia_Click="yangbenkongzhiUI_Xinjia_Click" Xiugai_Click="yangbenkongzhiUI_Xiugai_Click" Shanchu_Click="yangbenkongzhiUI_Shanchu_Click" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
+        </Grid>
+        <DataGrid x:Name="yangbenUI" Height="200" IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding id}" Header="ID" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding yangbenbianhao}" Header="样本编号"/>
+                <DataGridTextColumn Binding="{Binding xingming}" Header="姓名"/>
+                <DataGridTextColumn Binding="{Binding xingbie}" Header="性别"/>
+                <DataGridTextColumn Binding="{Binding gonghuanguanxi}" Header="共患关系"/>
+            </DataGrid.Columns>
+
+        </DataGrid>
     </StackPanel>
 </Page>
