--- a/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Tianjiayangben.xaml
+++ b/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Tianjiayangben.xaml
@@ -1,10 +1,10 @@
-﻿<Controls:MetroWindow x:Class="RIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.Tianjiayangben"
+﻿<Controls:MetroWindow x:Class="RIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.JIANCESHENQINGDAN.Tianjiayangben"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA"
+        xmlns:local="clr-namespace:RIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.JIANCESHENQINGDAN"
         mc:Ignorable="d"
         Title="添加申请单" Height="600" Width="800" Icon="/RIS;component/RESOURCE/PIC/图标.ico" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid DataContext="{Binding}" Name="shujuUI">
@@ -22,18 +22,18 @@
             <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Label x:Name="label" Content="申请单编号" HorizontalAlignment="Left" Margin="25,10,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="患者姓名" HorizontalAlignment="Left" Margin="32,10,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="样本编号" HorizontalAlignment="Left" Margin="32,10,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label1" Content="姓名" HorizontalAlignment="Left" Margin="56,10,0,0" Grid.Row="1" VerticalAlignment="Top"/>
         <Label x:Name="label2" Content="性别" HorizontalAlignment="Left" Margin="56,10,0,0" Grid.Row="2" VerticalAlignment="Top"/>
-        <Label x:Name="label3" Content="出生日期" HorizontalAlignment="Left" Margin="32,10,0,0" Grid.Row="3" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox" Text="{Binding shenqingdanbianhao}" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="textBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding huanzhexingming}" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="label3" Content="共患关系" HorizontalAlignment="Left" Margin="32,10,0,0" Grid.Row="3" VerticalAlignment="Top"/>
+        <TextBox x:Name="textBox" Text="{Binding yangbenbianhao}" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,10,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="textBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,10,0,0" Grid.Row="1" TextWrapping="Wrap" Text="{Binding xingming}" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="comboBox" Text="{Binding xingbie}" Grid.Column="1" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" Width="120">
             <ComboBoxItem Content="男" HorizontalAlignment="Left" Width="118"/>
             <ComboBoxItem Content="女" HorizontalAlignment="Left" Width="118"/>
             <ComboBoxItem Content="未知" HorizontalAlignment="Left" Width="118"/>
         </ComboBox>
-        <DatePicker Grid.Column="1" SelectedDate="{Binding chushengriqi}" HorizontalAlignment="Left" Margin="0,11,0,0" Grid.Row="3" VerticalAlignment="Top" Width="120"/>
+        <TextBox Grid.Column="1" Text="{Binding gonghuanguanxi}" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Row="3" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Controls:MetroWindow>
