--- a/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -37,7 +37,7 @@
 
         </DataGrid>
         <Grid>
-            <Label x:Name="label1_Copy1" Content="样本(申请单)" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Label x:Name="label1_Copy1" Content="申请单--样本" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
             <KONGJIAN:Biaogekongzhi x:Name="yangbenkongzhiUI" Xinjia_Click="yangbenkongzhiUI_Xinjia_Click" Xiugai_Click="yangbenkongzhiUI_Xiugai_Click" Shanchu_Click="yangbenkongzhiUI_Shanchu_Click" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
         </Grid>
         <DataGrid x:Name="yangbenUI" Height="150" IsReadOnly="True" AutoGenerateColumns="False">
@@ -51,17 +51,16 @@
 
         </DataGrid>
         <Grid>
-            <Label x:Name="label1_Copy2" Content="文档(申请单)" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
-            <KONGJIAN:Biaogekongzhi x:Name="wendangkongzhiUI"  HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
+            <Label x:Name="label1_Copy2" Content="申请单--文档" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <KONGJIAN:Biaogekongzhi x:Name="wendangkongzhiUI" Xinjia_Click="wendangkongzhiUI_Xinjia_Click" Xiugai_Click="wendangkongzhiUI_Xiugai_Click" Shanchu_Click="wendangkongzhiUI_Shanchu_Click"  HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
         </Grid>
-        <DataGrid x:Name="wendangUI" Height="150" IsReadOnly="True" AutoGenerateColumns="False">
+        <DataGrid x:Name="wendangUI" ItemsSource="{Binding}" Height="150"  AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding id}" Header="ID"  />
-                <DataGridTextColumn Binding="{Binding wendangming}" Header="文档名" />
-                <DataGridTextColumn Binding="{Binding daxiao}" Header="大小"  />
-                <DataGridTextColumn Binding="{Binding xingbie}" Header="备注" IsReadOnly="False"/>
+                <DataGridTextColumn Binding="{Binding Path=id}" Header="ID" IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Path=wenjianming }" Header="文档名" IsReadOnly="True" />
+                <DataGridTextColumn Binding="{Binding Path=daxiao}" Header="大小"  IsReadOnly="True"/>
+                <DataGridTextColumn Binding="{Binding Path=xingbie}" Header="备注" />
             </DataGrid.Columns>
-
         </DataGrid>
     </StackPanel>
 </Page>
