--- a/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -23,8 +23,9 @@
             <KONGJIAN:Fenyechaxun x:Name="fenyechaxun" HorizontalAlignment="Right" Margin="0,10,10,0" Jichuchanxun="Fenyechaxun_Jichuchanxun" VerticalAlignment="Top"/>
         </Grid>
         <Grid>
-            <Label x:Name="label1_Copy" Content="申请单列表" Style="{StaticResource ResourceKey=zibiaoti}" Width="830" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            <Label x:Name="label1_Copy" Content="申请单列表" Style="{StaticResource ResourceKey=zibiaoti}" Width="730" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,4" />
             <KONGJIAN:Biaogekongzhi x:Name="shenqingdanUI" Xinjia_Click="shenqingdanUI_Xinjia_Click" Xiugai_Click="shenqingdanUI_Xiugai_Click" Shanchu_Click="shenqingdanUI_Shanchu_Click" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
+            <Button x:Name="dayinbaobiaoUI" Click="dayinbaobiaoUI_Click" Content="打印报表" HorizontalAlignment="Right" Margin="0,11,280,0" VerticalAlignment="Top" Width="75"/>
         </Grid>
         <DataGrid x:Name="shenqingdanliebiaoUI" Height="150" SelectionChanged="shenqingdanliebiaoUI_SelectionChanged" IsReadOnly="True" AutoGenerateColumns="False">
             <DataGrid.Columns>
