--- a/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/RIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -25,7 +25,7 @@
         <Grid>
             <Label x:Name="label1_Copy" Content="申请单列表" Style="{StaticResource ResourceKey=zibiaoti}" Width="730" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,4" />
             <KONGJIAN:Biaogekongzhi x:Name="shenqingdanUI" Xinjia_Click="shenqingdanUI_Xinjia_Click" Xiugai_Click="shenqingdanUI_Xiugai_Click" Shanchu_Click="shenqingdanUI_Shanchu_Click" HorizontalAlignment="Right" Margin="10" VerticalAlignment="Center" />
-            <Button x:Name="dayinbaobiaoUI" Click="dayinbaobiaoUI_Click" Content="打印报表" HorizontalAlignment="Right" Margin="0,11,280,0" VerticalAlignment="Top" Width="75"/>
+            <Button x:Name="dayinbaobiaoUI" Click="dayinbaobiaoUI_Click" Content="打印报表" HorizontalAlignment="Right" Margin="0,11,280,0" VerticalAlignment="Top" Width="75" FontSize="12" FontFamily="Microsoft YaHei"/>
         </Grid>
         <DataGrid x:Name="shenqingdanliebiaoUI" Height="150" SelectionChanged="shenqingdanliebiaoUI_SelectionChanged" IsReadOnly="True" AutoGenerateColumns="False">
             <DataGrid.Columns>
