--- a/RISWPF/HSWRIS/PAGE/SYST/Denglu.xaml
+++ b/RISWPF/HSWRIS/PAGE/SYST/Denglu.xaml
@@ -5,6 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HSWRIS.PAGE.SYST"
         mc:Ignorable="d"
-        Title="HSWRIS" Height="300" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/HSWRIS;component/RESOURCE/PIC/图标.ico">
-    <Grid/>
+        Title="HSWRIS" Height="245" Width="333" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Icon="/HSWRIS;component/RESOURCE/PIC/图标.ico">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="165"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Label x:Name="label" Content="帐号" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Height="26" Width="34"/>
+        <Label x:Name="label1" Content="密码" HorizontalAlignment="Right" Margin="0,10,10,0" Grid.Row="1" VerticalAlignment="Top" Height="26" Width="34"/>
+        <TextBox x:Name="textBox" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,0,0,11" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Width="120"/>
+        <TextBox x:Name="textBox1" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="0,12,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="69" Margin="34,46,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="69" Source="/HSWRIS;component/RESOURCE/PIC/印章.png"/>
+        <Button x:Name="dengluUI" Click="dengluUI_Click" Content="登录" HorizontalAlignment="Left" Margin="121,65,0,0" Grid.Row="1" VerticalAlignment="Top" Width="164" Grid.ColumnSpan="2"/>
+    </Grid>
 </Window>
