--- a/RISWPF/HSWRIS/App.xaml
+++ b/RISWPF/HSWRIS/App.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:HSWRIS"
-             StartupUri="/PAGE/SYST/Denglu.xaml">
+             StartupUri="/PAGE/SYST/Denglu.xaml"
+             ShutdownMode="OnLastWindowClose">
     <Application.Resources>
          
     </Application.Resources>
