--- a/RISWPF/RIS/RESOURCE/STYLE/Style01.xaml
+++ b/RISWPF/RIS/RESOURCE/STYLE/Style01.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    >
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- 页面的一级标题 -->
     <Style x:Key="yetoubiaoti" TargetType="Label">
         <Setter Property="FontSize" Value="20"></Setter>
