--- a/RISWPF/HSWRIS/App.xaml
+++ b/RISWPF/HSWRIS/App.xaml
@@ -5,6 +5,10 @@
              StartupUri="/PAGE/SYST/Denglu.xaml"
              ShutdownMode="OnLastWindowClose">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/RESOURCE/STYLE/Page.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
