--- a/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -1,14 +1,44 @@
-﻿<Page x:Class="HSWRIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.JIANCESHENQINGDAN.Jianceshenqingdan"
+﻿<Page
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:HSWRIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.JIANCESHENQINGDAN"
+      xmlns:KONGJIAN="clr-namespace:HSWRIS.KONGJIAN" x:Class="HSWRIS.PAGE.ZUZHIPEIXING.LINCHUANGHLA.JIANCESHENQINGDAN.Jianceshenqingdan"
       mc:Ignorable="d"  MinHeight="600"
       d:DesignWidth="1100"
-      Title="Jianceshenqingdan">
+      Title="Jianceshenqingdan"
+    IsVisibleChanged="Page_IsVisibleChanged"
+    >
 
     <StackPanel>
         <Label x:Name="label" Style="{StaticResource ResourceKey=yetoubiaoti}" Content="检测申请单" />
+        <StackPanel  Orientation="Horizontal" Margin="0,10,0,0">
+            <Label x:Name="lable" Content="生成检测单日期"/>
+            <DatePicker Width="100"/>
+            <Label x:Name="label1" Content="至"/>
+            <DatePicker Width="100"/>
+            <Label x:Name="lable_Copy" Content="患者姓名" Margin="20,0,0,0"/>
+            <TextBox x:Name="textBox" Height="23" TextWrapping="Wrap" Text="" Width="60"/>
+            <Label x:Name="lable_Copy1" Content="检测单编号" Margin="20,0,0,0"/>
+            <TextBox x:Name="textBox_Copy" Height="23" TextWrapping="Wrap" Text="" Width="85"/>
+            <Label x:Name="lable_Copy2" Content="检测项目" Margin="20,0,0,0"/>
+            <ComboBox x:Name="comboBox" Width="40">
+                <ComboBoxItem Content="SZ" />
+                <ComboBoxItem Content="FY" />
+            </ComboBox>
+            <Button x:Name="button" Content="查询" Padding="10,0,10,0" Margin="10,0,0,0"/>
+            <Button x:Name="button_Copy" Content="下载收样表" Padding="10,0,10,0" Margin="10,0,0,0"/>
+        </StackPanel>
+        <Label x:Name="label2" Content="---- 申请单列表 ----" Margin="0,10,0,0" FontSize="15"/>
+        <DataGrid x:Name="dataGrid" Height="200" Background="{x:Null}" IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="申请单编号"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Grid Height="22" Margin="0,5,0,0">
+            <KONGJIAN:Liebiaokongzhi HorizontalAlignment="Right"  x:Name="shenqingdankongzhiUI" Tianjia_Click="shenqingdankongzhiUI_Tianjia_Click" Shanchu_Click="shenqingdankongzhiUI_Shanchu_Click" Xiugai_Click="shenqingdankongzhiUI_Xiugai_Click" />
+        </Grid>
+
     </StackPanel>
 </Page>
