--- a/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -14,24 +14,28 @@
     <StackPanel>
         <Label x:Name="label" Style="{StaticResource ResourceKey=yetoubiaoti}" Content="检测申请单" />
         <StackPanel  Orientation="Horizontal" Margin="0,10,0,0">
-            <Label x:Name="lable" Content="生成检测单日期"/>
+            <Label x:Name="lable1" Content="生成检测单日期"/>
             <DatePicker Width="100"/>
-            <Label x:Name="label1" Content="至"/>
+            <Label x:Name="label3" Content="至"/>
             <DatePicker Width="100"/>
-            <Label x:Name="lable_Copy" Content="患者姓名" Margin="20,0,0,0"/>
-            <TextBox x:Name="textBox" Height="23" TextWrapping="Wrap" Text="" Width="60"/>
-            <Label x:Name="lable_Copy1" Content="检测单编号" Margin="20,0,0,0"/>
-            <TextBox x:Name="textBox_Copy" Height="23" TextWrapping="Wrap" Text="" Width="85"/>
-            <Label x:Name="lable_Copy2" Content="检测项目" Margin="20,0,0,0"/>
-            <ComboBox x:Name="comboBox" Width="40">
+            <Label x:Name="lable_Copy3" Content="患者姓名" Margin="20,0,0,0"/>
+            <TextBox x:Name="textBox1" Height="23" TextWrapping="Wrap" Text="" Width="60"/>
+            <Label x:Name="lable_Copy4" Content="检测单编号" Margin="20,0,0,0"/>
+            <TextBox x:Name="textBox_Copy1" Height="23" TextWrapping="Wrap" Text="" Width="85"/>
+            <Label x:Name="lable_Copy5" Content="检测项目" Margin="20,0,0,0"/>
+            <ComboBox x:Name="comboBox1" Width="40">
                 <ComboBoxItem Content="SZ" />
                 <ComboBoxItem Content="FY" />
             </ComboBox>
-            <Button x:Name="button" Content="查询" Padding="10,0,10,0" Margin="10,0,0,0"/>
-            <Button x:Name="button_Copy" Content="下载收样表" Padding="10,0,10,0" Margin="10,0,0,0"/>
+        </StackPanel>
+        <StackPanel  Orientation="Horizontal" Margin="0,10,0,0">
+            <Label x:Name="label1" Content="   " Width="430"/>
+            <KONGJIAN:Fenyechaxun/>
+            <Button x:Name="button1" Content="查询" Padding="10,0,10,0" Margin="10,0,0,0" RenderTransformOrigin="0.167,1.5"/>
+            <Button x:Name="button_Copy1" Content="下载收样表" Padding="10,0,10,0" Margin="10,0,0,0"/>
         </StackPanel>
         <Label x:Name="label2" Content="---- 申请单列表 ----" Margin="0,10,0,0" FontSize="15"/>
-        <DataGrid x:Name="dataGrid" Height="200" Background="{x:Null}" IsReadOnly="True" AutoGenerateColumns="False">
+        <DataGrid x:Name="dataGrid" MinHeight="100" Background="{x:Null}" IsReadOnly="True" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="申请单编号"/>
             </DataGrid.Columns>
