--- a/RISWPF/HSWRIS/PAGE/SYST/Zhuchuangti.xaml
+++ b/RISWPF/HSWRIS/PAGE/SYST/Zhuchuangti.xaml
@@ -26,7 +26,7 @@
                 </TreeViewItem>
             </TreeView>
         </ScrollViewer>
-        <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Auto" HorizontalContentAlignment="Center" VerticalScrollBarVisibility="Auto">
             <Frame x:Name="jiazaiqi" Margin="0,0,10,0" Content="" NavigationUIVisibility="Hidden"/>
         </ScrollViewer>
 
