--- a/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
+++ b/RISWPF/HSWRIS/PAGE/ZUZHIPEIXING/LINCHUANGHLA/JIANCESHENQINGDAN/Jianceshenqingdan.xaml
@@ -35,7 +35,7 @@
         </StackPanel>
         <StackPanel Orientation="Vertical" Name="shenqingdankuaiUI" Visibility="Visible">
             <Label x:Name="label2" Content="---- 申请单列表 ----" FontSize="15"/>
-            <DataGrid x:Name="shenqingdanliebiaoUI" ItemsSource="{Binding}" SelectionMode="Single"  MinHeight="400" Background="{x:Null}" IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid x:Name="shenqingdanliebiaoUI"  ItemsSource="{Binding}" SelectionMode="Single"   MinHeight="400" Background="{x:Null}" IsReadOnly="True" AutoGenerateColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="编号" Binding="{Binding bianhao}"/>
                     <DataGridTextColumn Header="类型" Binding="{Binding leixing}"/>
@@ -68,11 +68,136 @@
                 <Button x:Name="xiangxixinxiUI" Click="liebiao_xiangxi_qiehuan" Content="详细信息" HorizontalAlignment="Left"  Width="75"/>
             </Grid>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Name="xiangxixinxikuaiUI" Visibility="Collapsed">
+        <StackPanel Orientation="Vertical" Name="xiangxixinxikuaiUI" Visibility="Visible">
             <Label x:Name="label2_Copy" Content="---- 详细信息 ----" FontSize="15"/>
             <TabControl x:Name="tabControl" MinHeight="400" Background="{x:Null}">
                 <TabItem Header="样本信息">
-                    <Grid />
+                    <StackPanel Orientation="Horizontal"  >
+                        <Grid Width="770">
+                            <DataGrid x:Name="yangbenliebiaoUI" ItemsSource="{Binding}" Background="{x:Null}" Margin="0,0,0,27" IsReadOnly="True" AutoGenerateColumns="False">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Binding="{Binding yuanshibianhao}" Header="原始编号"/>
+                                    <DataGridTextColumn Binding="{Binding xingming}" Header="姓名"/>
+                                    <DataGridTextColumn Binding="{Binding xingbie}" Header="性别"/>
+                                    <DataGridTextColumn Binding="{Binding chushengriqi,StringFormat=MM/dd/yyyy}" Header="出生日期"/>
+                                    <DataGridTextColumn Binding="{Binding leixing}" Header="类型"/>
+                                    <DataGridTextColumn Binding="{Binding yangbenbianhao}" Header="样本编号"/>
+                                    <DataGridTextColumn Binding="{Binding huanzhebenren}" Header="患者本人"/>
+                                    <DataGridTextColumn Binding="{Binding gonghuanguanxi}" Header="共患关系"/>
+                                    <DataGridTextColumn Binding="{Binding songjiandanwei}" Header="送检单位"/>
+                                    <DataGridTextColumn Binding="{Binding yangbenleixing}" Header="样本类型"/>
+                                    <DataGridTextColumn Binding="{Binding yangguanshu}" Header="样管数"/>
+                                    <DataGridTextColumn Binding="{Binding yangbenhege}" Header="样本合格"/>
+                                    <DataGridTextColumn Binding="{Binding caiyangriqi,StringFormat=MM/dd/yyyy}" Header="采样日期"/>
+                                    <DataGridTextColumn Binding="{Binding shouyangriqi,StringFormat=MM/dd/yyyy}" Header="收样日期"/>
+                                    <DataGridTextColumn Binding="{Binding fufeiriqi,StringFormat=MM/dd/yyyy}" Header="付费日期"/>
+                                    <DataGridTextColumn Binding="{Binding shouyangzhe}" Header="收样者"/>
+                                    <DataGridTextColumn Binding="{Binding jianceriqi,StringFormat=MM/dd/yyyy}" Header="检测日期"/>
+                                    <DataGridTextColumn Binding="{Binding beizhu}" Header="备注"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                            <KONGJIAN:Liebiaokongzhi x:Name="yangbenkongzuiUI" Tianjia_Click="yangbenkongzuiUI_Tianjia_Click" Xiugai_Click="yangbenkongzuiUI_Xiugai_Click" Shanchu_Click="yangbenkongzuiUI_Shanchu_Click" HorizontalAlignment="Left" Margin="525,346,0,0" VerticalAlignment="Top"/>
+                        </Grid>
+                        <StackPanel Width="315" IsEnabled="False" >
+                            <Grid >
+                                <CheckBox  x:Name="gaofenzuUI" IsChecked="{Binding gaofenzu}" Content="HLA高分辨基因分型初筛" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label5" Content="SBT" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_a}"     x:Name="gaofen_sbt_aUI"  Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_b}"     x:Name="gaofen_sbt_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_drb1}"  x:Name="gaofen_sbt_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_c}"     x:Name="gaofen_sbt_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_dqb1}"  x:Name="gaofen_sbt_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding gaofen_sbt_dpb1}"  x:Name="gaofen_sbt_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <CheckBox IsChecked="{Binding dengweizu}" x:Name="dengweizuUI" Content="HLA等位基因确认分型" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label7" Content="SBT" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_a}"     x:Name="dengwei_sbt_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_b}"     x:Name="dengwei_sbt_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_drb1}"  x:Name="dengwei_sbt_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_c}"     x:Name="dengwei_sbt_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_dqb1}"  x:Name="dengwei_sbt_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_sbt_dpb1}"  x:Name="dengwei_sbt_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label8" Content="SSOP" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_a}"     x:Name="dengwei_ssop_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_b}"     x:Name="dengwei_ssop_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_drb1}"  x:Name="dengwei_ssop_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_c}"     x:Name="dengwei_ssop_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_dqb1}"  x:Name="dengwei_ssop_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ssop_dpb1}"  x:Name="dengwei_ssop_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label9" Content="NGS" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ngs_c1}" x:Name="dengwei_ngs_c1UI" Content="Class I" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dengwei_ngs_c2}" x:Name="dengwei_ngs_c2UI" Content="Class II" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <CheckBox IsChecked="{Binding chushaizu}"  x:Name="chushaizuUI" Content="HLA初筛转确认分型" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label11" Content="SSOP" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_a}"     x:Name="chushai_ssop_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_b}"     x:Name="chushai_ssop_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_drb1}"  x:Name="chushai_ssop_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_c}"     x:Name="chushai_ssop_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_dqb1}"  x:Name="chushai_ssop_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ssop_dpb1}"  x:Name="chushai_ssop_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label12" Content="NGS" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ngs_c1}" x:Name="chushai_ngs_c1UI" Content="Class I" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding chushai_ngs_c2}" x:Name="chushai_ngs_c2UI" Content="Class II" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <CheckBox IsChecked="{Binding mianfeizu}" x:Name="mianfeizuUI" Content="HLA免费复检" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label14" Content="SBT" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_a}"    x:Name="mianfei_sbt_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_b}"    x:Name="mianfei_sbt_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_drb1}" x:Name="mianfei_sbt_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_c}"    x:Name="mianfei_sbt_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_dqb1}" x:Name="mianfei_sbt_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_sbt_dpb1}" x:Name="mianfei_sbt_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label15" Content="SSOP" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_a}"    x:Name="mianfei_ssop_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_b}"    x:Name="mianfei_ssop_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_drb1}" x:Name="mianfei_ssop_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_c}"    x:Name="mianfei_ssop_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_dqb1}" x:Name="mianfei_ssop_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding mianfei_ssop_dpb1}" x:Name="mianfei_ssop_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <CheckBox IsChecked="{Binding dangezu}" x:Name="dangezuUI" Content="HLA单个位点基因分型" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label6" Content="SBT" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_a}"     x:Name="dange_sbt_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_b}"     x:Name="dange_sbt_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_drb1}"  x:Name="dange_sbt_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_c}"     x:Name="dange_sbt_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_dqb1}"  x:Name="dange_sbt_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_sbt_dpb1}"  x:Name="dange_sbt_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                            <Grid >
+                                <Label x:Name="label10" Content="SSOP" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_a}"     x:Name="dange_ssop_aUI" Content="A" HorizontalAlignment="Left" Margin="56,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_b}"     x:Name="dange_ssop_bUI" Content="B" HorizontalAlignment="Left" Margin="86,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_drb1}"  x:Name="dange_ssop_drb1UI" Content="DRB1" HorizontalAlignment="Left" Margin="116,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_c}"     x:Name="dange_ssop_cUI" Content="C" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_dqb1}"  x:Name="dange_ssop_dqb1UI" Content="DQB1" HorizontalAlignment="Left" Margin="200,5,0,0" VerticalAlignment="Top"/>
+                                <CheckBox IsChecked="{Binding dange_ssop_dpb1}"  x:Name="dange_ssop_dpb1UI" Content="DPB1" HorizontalAlignment="Left" Margin="255,5,0,0" VerticalAlignment="Top"/>
+                            </Grid>
+                        </StackPanel>
+                    </StackPanel>
                 </TabItem>
                 <TabItem Header="费用信息">
                     <Grid/>
@@ -81,8 +206,6 @@
             <Grid Margin="0,5,0,0" >
                 <Button x:Name="fanhuiUI" Content="返回" Click="liebiao_xiangxi_qiehuan" HorizontalAlignment="Left" Width="75"/>
             </Grid>
-
         </StackPanel>
-
     </StackPanel>
 </Page>
